# ws2812_display

./: LICENSE
ASR/: disp-asr.hd
MCU/sample_project/: partitions.csv  sdkconfig  sdkconfig.old
MCU/sample_project/components/espressif__led_strip/include/: led_strip.h
MCU/sample_project/components/espressif__led_strip/src/: led_strip_api.c  led_strip_rmt_dev.c  led_strip_rmt_encoder.c
MCU/sample_project/main/: CMakeLists.txt  idf_component.yml  main.c
MCU/sample_project/main/comm/: 4g.c  4g.h  asr.c  asr.h  ble.c  ble.h  ir.c  ir.h
MCU/sample_project/main/sensor/: config.c  config.h  disp.c  disp.h  power.c  power.h
MCU/sample_project/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
MCU/sample_project/main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_label3.c  ui_comp_label3.h
MCU/sample_project/main/ui/fonts/: ui_font_WSChinese16ALL.c  ui_font_chinese28.c  ui_font_chineseLarge.c  ui_font_chineseMicro.c  ui_font_chineseMin.c  ui_font_chineseNano.c
MCU/sample_project/main/ui/images/: ui_img_bat16_png.c  ui_img_qiya32_png.c  ui_img_wenshidu32_png.c  ui_img_xinhuo1_png.c
MCU/sample_project/main/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c
Wechat-miniprogram/小程序样例(ble)/: project.private.config.json
Wechat-miniprogram/小程序样例(ble)/pages/device/: device.js  device.wxml  device.wxss
Wechat-miniprogram/小程序样例(ble)/pages/search/: search.wxml
doc/: 通讯协议.xlsx
